--- a/Charts.Web/Views/Shared/_Layout.cshtml
+++ b/Charts.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-reboot.css" rel="stylesheet" />
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
 </head>
 <body data-spy="scroll" data-target="#myScrollspy" data-offset="1">
 
@@ -31,6 +32,5 @@
     </div>
     
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-
 </body>
 </html>
