--- a/Charts.Web/Views/Shared/_Layout.cshtml
+++ b/Charts.Web/Views/Shared/_Layout.cshtml
@@ -13,13 +13,13 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a href="home/index" class="nav-link">
+                <a href="/home/index" class="nav-link">
                     <img src="~/Content/Images/monetizationdollarmoney_122856.svg" width="32" height="32" alt="logo"> Razor
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="home/ajax">
+                <a class="nav-link" href="/home/ajax">
                     <img src="~/Content/Images/1486564180-finance-financial-report_81493.svg" width="32" height="32">Ajax
                 </a>
             </li>
